# sysinspect

./: .gitignore  BSDmakefile  Cargo.toml  LICENSE  Makefile  Makefile.in  README.md  rustfmt.toml  sysinspect.conf
libcommon/: Cargo.toml
libcommon/src/: eidhub.rs  humaninput.rs  lib.rs
libdatastore/: Cargo.toml
libdatastore/src/: cfg.rs  client.rs  lib.rs  main.rs  resources.rs  util.rs
libdatastore/tests/: resources.rs
libdpq/: Cargo.toml
libdpq/examples/: dpq-demo.rs
libdpq/src/: lib.rs  lib_ut.rs
libeventreg/: Cargo.toml  build.rs
libeventreg/proto/: ipc.proto
libeventreg/src/: ipcc.rs  ipcs.rs  kvdb.rs  lib.rs
libmenotify/: Cargo.toml
libmenotify/src/: context.rs  context_ut.rs  contract.rs  contract_ut.rs  error.rs  error_ut.rs  event.rs  event_ut.rs  host.rs  host_ut.rs  layout.rs  layout_ut.rs  lib.rs  module.rs  module_ut.rs  packagekit.rs  program.rs  program_ut.rs  runner.rs  runner_ut.rs  runtime.rs  runtime_ut.rs  state.rs
libmenotify/src/helpers/: http.rs  http_ut.rs  mod.rs  packagekit.rs  packagekit_ut.rs
libmenotify/src/program/: loaded.rs  loaded_ut.rs  mod.rs  runner.rs  runner_ut.rs
libmenotify/src/runtime/: mod.rs
libmenotify/src/state/: mod.rs  state_ut.rs
libmodcore/: Cargo.toml
libmodcore/src/: lib.rs  manrndr.rs  modcli.rs  modinit.rs  modlogger.rs  response.rs  rtdocschema.rs  rtspec.rs  runtime.rs  runtime_ut.rs  tpl.rs
libmodcore/src/helpers/: env.rs  env_ut.rs  host.rs  host_ut.rs  mod.rs  packagekit.rs  packagekit_ut.rs
libmodpak/: Cargo.toml  build.rs
libmodpak/src/: lib.rs  lib_ut.rs  mpk.rs  mpk_ut.rs
libmodpak/tests/: profile_sync.rs
libsensors/: Cargo.toml  Makefile
libsensors/demos/net/: README.md  sensors.cfg
libsensors/etc/: sensors.cfg
libsensors/examples/: loader.rs  svc.rs
libsensors/src/: argparse.rs  bridge.rs  lib.rs  lib_ut.rs  service.rs  sspec.rs
libsensors/src/sensors/: fsnotify.rs  ifacenotify.rs  ifacenotify_ut.rs  menotify.rs  mod.rs  mountnotify.rs  net_health.rs  net_health_ut.rs  net_hostname.rs  net_hostname_ut.rs  net_route.rs  net_route_ut.rs  net_throughput.rs  net_throughput_ut.rs  net_ut.rs  net_wifi.rs  net_wifi_ut.rs  netnotify.rs  proc_ut.rs  procnotify.rs  sensor.rs  socknotify.rs  socknotify_ut.rs
libsensors/tests/: argparse_args.rs  bridge_emitter.rs  loader_events_negative.rs  loader_merge.rs  loader_scopes.rs  profile_match.rs  registry_complete.rs  registry_init.rs  sensor_run_early_returns.rs  service_start.rs  spec_items.rs  sspec_interval_units.rs  sspec_parse.rs
libsetup/: Cargo.toml
libsetup/src/: lib.rs  local_marker.rs  local_marker_ut.rs  mnsetup.rs
libsysinspect/: Cargo.toml
libsysinspect/src/: inspector.rs  journal.rs  journal_ut.rs  lib.rs  logger.rs  tpl.rs
libsysinspect/src/cfg/: mmconf.rs  mmconf_ut.rs  mod.rs
libsysinspect/src/console/: console_ut.rs  mod.rs
libsysinspect/src/context/: host.rs  host_ut.rs  mod.rs
libsysinspect/src/intp/: README.txt  actions.rs  actions_ut.rs  checkbook.rs  conf.rs  conf_ut.rs  constraints.rs  entities.rs  functions.rs  inspector.rs  mod.rs  relations.rs
libsysinspect/src/mdescr/: README.txt  browse_types.rs  browser.rs  browser_ut.rs  catalog.rs  catalog_ut.rs  datapatch.rs  distr.rs  inhpatcher.rs  mod.rs  mspec.rs  mspecdef.rs  telemetry.rs
libsysinspect/src/mdl/: mod.rs  mspec.rs  mspecdef.rs
libsysinspect/src/modlib/: README.txt  mod.rs  modinit.rs  response.rs  runtime.rs  tpl.rs
libsysinspect/src/proto/: README.md  errcodes.rs  mod.rs  payload.rs  query.rs  rqtypes.rs
libsysinspect/src/pylang/: mod.rs  pvm.rs
libsysinspect/src/reactor/: README.txt  callback.rs  evtproc.rs  mod.rs  receiver.rs
libsysinspect/src/rsa/: keys.rs  mod.rs  rotation.rs  rotation_ut.rs
libsysinspect/src/tmpl/: render.rs
libsysinspect/src/traits/: README.txt  mod.rs  osinfo.rs  osinfo_ut.rs  systraits.rs  traits_query.pest  traits_ut.rs
libsysinspect/src/transport/: README.txt  mod.rs  secure_bootstrap.rs  secure_bootstrap_ut.rs  secure_channel.rs  secure_channel_ut.rs  transport_ut.rs
libsysinspect/src/util/: README.txt  cfg.rs  dataconv.rs  func.rs  iofs.rs  mod.rs  sys.rs  sys_ut.rs  top.rs  tty.rs
libsysinspect/tests/: action_response.rs  dropins_integration.rs  journal_integration.rs  mspec_error_diagnostics.rs  rsa_keys.rs  rsa_rotation.rs  secure_transport_contract.rs  utl_dataconv.rs  workspace_contract.rs
libsysproto/: Cargo.toml
libsysproto/src/: README.md  lib.rs  mod.rs  payload.rs  query.rs  replay.rs  replay_ut.rs  rqtypes.rs  rqtypes_ut.rs  secure.rs
libsysproto/src/secure/: secure_ut.rs
libtelemetry/: Cargo.toml  README.txt
libtelemetry/src/: aggregate.rs  cycaggr.rs  expr.rs  lib.rs  logevt.rs  mnaggr.rs  query.rs
libwebapi/: Cargo.toml
libwebapi/src/: keystore.rs  lib.rs  lib_ut.rs  pamauth.rs  sessions.rs  sessions_ut.rs
libwebapi/src/api/: mod.rs
libwebapi/tests/: api_contract.rs
libwebapi/tests/data/: sysmaster-dev.crt  sysmaster-dev.key  webapi-test-ca.crt  webapi-test-client.crt  webapi-test-client.key  webapi-test-server.crt  webapi-test-server.key
modules/cfg/resource/: Cargo.toml  TODO.txt
modules/fs/file/: Cargo.toml
modules/net/http/: Cargo.toml
modules/runtime/lua-runtime/: Cargo.toml
modules/runtime/py3-runtime/: Cargo.toml  TODO.txt
sysclient/: Cargo.toml  Makefile  README.md  openapi.json  rustfmt.toml
sysclient/scripts/: stupid-downgrader.jq
sysclient/src/: lib.rs  lib_ut.rs  main.rs
sysclient/sysinspect-client/: Cargo.toml  README.md
sysclient/tests/: client_contract.rs
sysmaster/: Cargo.toml
sysmaster/src/: clidef.rs  cluster.rs  config.rs  console.rs  hopstart.rs  main.rs  master.rs  master_itf.rs  master_ut.rs  mkb_ut.rs  otel.rs  transport.rs  transport_ut.rs  util.rs
sysminion/: Cargo.toml
sysminion/src/: arcb.rs  callbacks.rs  clidef.rs  config.rs  filedata.rs  filedata_ut.rs  inbound_cmd.rs  inbound_cmd_ut.rs  main.rs  minion.rs  minion_sha_ut.rs  minion_ut.rs  proto.rs  proto_ut.rs  ptcounter.rs  reconnect_signal_ut.rs  registration_ut.rs  rsa.rs  rsa_ut.rs  setup_ut.rs  start_ut.rs  stop_ut.rs
(+493 files in other folders)
