[package]
name = "sysinspect"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["unstable-styles"] }
colored = "3.1.1"
libsysinspect = { path = "./libsysinspect" }
libeventreg = { path = "./libeventreg" }
libmodpak = { path = "./libmodpak" }
libcommon = { path = "./libcommon" }
libsysproto = { path = "./libsysproto" }
libsetup = { path = "./libsetup" }
log = "0.4.29"
sysinfo = { version = "0.33.1", features = ["linux-tmpfs"] }
tokio = { version = "1.52.3", features = ["full"] }
ratatui = { version = "0.30.0", features = [
    "all-widgets",
    "serde",
    "unstable",
] }
crossterm = "0.28.1"
rand = "0.9.4"
indexmap = "2.14.0"
serde_json = "1.0.150"
jsonpath_lib = "0.3.0"
openssl = { version = "0.10.80", features = ["vendored"] }
ratatui-cheese = "0.7.0"
ratatui-glamour = { git = "https://github.com/tinythings/ratatui-glamour.git" }
glob = "0.3.3"
unicode-width = "0.2.2"

[workspace]
resolver = "2"
members = [
    "modules/sys/proc",
    "modules/sys/net",
    "modules/sys/run",
    "modules/sys/ssrun",
    "modules/sys/user",
    "modules/sys/pkg",
    "modules/sys/service",
    "modules/os/facts",
    "modules/os/kernel",
    "modules/net/http",
    "modules/net/ipfw",
    "modules/runtime/lua-runtime",
    "modules/runtime/py3-runtime",
    "modules/runtime/wasm-runtime",
    "libsysinspect",
    "libeventreg",
    "sysmaster",
    "sysminion",
    "modules/fs/file",
    "modules/fs/dir",
    "libsetup",
    "libmodpak",
    "libscheduler",
    "libmodcore",
    "libtelemetry",
    "libwebapi",
    "sysclient",
    "libdpq",
    "libsysproto",
    "libcommon",
    "libsensors",
    "libmenotify",
    "libdatastore",
    "modules/cfg/resource"]

[profile.dev]
panic = "abort"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
