[package]
name = "libcommon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
colored = "3.1.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
jsonpath-rust = "1.0.4"
log = "0.4.29"
parse-size = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sled = "0.34.7"
tera = "1.20.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
