[package]
name = "libdatastore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
libc = "0.2.182"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }

[lib]
name = "libdatastore"
path = "src/lib.rs"

[[bin]]
name = "datastore-example"
path = "src/main.rs"
