[package]
name = "libdatastore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
futures-util = "0.3.32"
libc = "0.2.186"
log = "0.4.29"
reqwest = { version = "0.13.3", features = ["blocking", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"

[lib]
name = "libdatastore"
path = "src/lib.rs"

[[bin]]
name = "datastore-example"
path = "src/main.rs"
