[package]
name = "libdpq"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
sled = "0.34.7"
tokio = { version = "1.49.0", features = ["full"] }
libcommon = { path = "../libcommon" }
libsysproto = { path = "../libsysproto" }
thiserror = "2.0.18"
log = "0.4.29"
anyhow = "1.0.101"
