[package]
name = "libeventreg"
version = "0.4.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
serde = "1.0.219"
serde_json = "1.0.143"
sled = "0.34.7"
libsysinspect = { path = "../libsysinspect" }
log = "0.4.28"
colored = "3.0.0"
fs_extra = "1.3.0"
tempfile = "3.22.0"
glob = "0.3.3"
async-stream = "0.3.6"
bincode = "1.3.3"
hyper-util = { version = "0.1.16", features = ["tokio"] }
interprocess = "2.2.3"
ipc-channel = { version = "0.19.0", features = ["async"] }
prost = "0.13.5"
rng = "0.1.0"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.5.2"
indexmap = { version = "2.11.1", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
