[package]
name = "libeventreg"
version = "0.4.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
serde = "1.0.228"
serde_json = "1.0.149"
sled = "0.34.7"
libsysinspect = { path = "../libsysinspect" }
log = "0.4.29"
colored = "3.1.1"
fs_extra = "1.3.0"
tempfile = "3.24.0"
glob = "0.3.3"
async-stream = "0.3.6"
bincode = "1.3.3"
hyper-util = { version = "0.1.19", features = ["tokio"] }
interprocess = "2.2.3"
ipc-channel = { version = "0.19.0", features = ["async"] }
prost = "0.13.5"
rng = "0.1.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.5.3"
indexmap = { version = "2.13.0", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
