[package]
name = "libmenotify"
version = "0.1.0"
edition = "2024"

[lib]
name = "libmenotify"
path = "src/lib.rs"

[dependencies]
colored = "3.1.1"
log = "0.4.29"
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.25.0"
