[package]
name = "libmenotify"
version = "0.1.0"
edition = "2024"

[lib]
name = "libmenotify"
path = "src/lib.rs"

[[test]]
name = "githubissues_demo_it"
path = "../examples/demos/menotify/githubissues_it.rs"

[dependencies]
colored = "3.1.1"
humantime = "2.3.0"
libcommon = { path = "../libcommon" }
libmodcore = { path = "../libmodcore" }
log = "0.4.29"
mlua = { version = "0.11.5", features = ["lua54", "serialize", "vendored"] }
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.25.0"
