[package]
name = "libmodcore"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
indexmap = "2.14.0"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
shlex = "1.3.0"
textwrap = "0.16.2"
libsysinspect = { path = "../libsysinspect" }
libcommon = { path = "../libcommon" }
clap = { version = "4.6.1", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
log = "0.4.29"
chrono = "0.4.44"
zbus = { version = "5.15.0", features = ["blocking"] }
