[package]
name = "libmodpak"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
libsysinspect = { path = "../libsysinspect" }
libmodcore = { path = "../libmodcore" }
log = "0.4.29"
clap = { version = "4.5.53", features = ["unstable-styles"] }
goblin = "0.9.3"
colored = "3.0.0"
indexmap = { version = "2.12.1", features = ["serde"] }
reqwest = "0.12.26"
fs_extra = "1.3.0"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
anyhow = "1.0.100"
cruet = "0.15.0"
prettytable = "0.10.0"
glob = "0.3.3"
regex = "1.12.2"
