[package]
name = "libmodpak"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
libsysinspect = { path = "../libsysinspect" }
libmodcore = { path = "../libmodcore" }
libcommon = { path = "../libcommon" }
log = "0.4.29"
clap = { version = "4.6.1", features = ["unstable-styles"] }
goblin = "0.9.3"
colored = "3.1.1"
indexmap = { version = "2.14.0", features = ["serde"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
fs_extra = "1.3.0"
tokio = { version = "1.52.3", features = ["full"] }
once_cell = "1.21.4"
anyhow = "1.0.102"
cruet = "0.15.0"
prettytable = "0.10.0"
glob = "0.3.3"
regex = "1.12.3"
textwrap = { version = "0.16.2", features = ["hyphenation"] }
semver = "1.0.28"

[dev-dependencies]
tempfile = "3.27.0"
