[package]
name = "libsensors"
version = "0.1.0"
edition = "2024"

[lib]
name = "libsensors"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.101"
filescream = {git = "https://github.com/tinythings/filescream.git", branch = "master"}
indexmap = { version = "2.13.0", features = ["serde"] }
libcommon = { version = "0.1.0", path = "../libcommon" }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.25.0"
walkdir = "2.5.0"
