[package]
name = "libsensors"
version = "0.1.0"
edition = "2024"

[lib]
name = "libsensors"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
dashmap = "6.1.0"
env_logger = "0.11.9"
fastrand = "2.3.0"
filescream = {git = "https://github.com/tinythings/filescream.git", branch = "master"}
indexmap = { version = "2.13.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5.0"
libsysinspect = { path = "../libsysinspect"}
libcommon = { path = "../libcommon" }
colored = "3.1.1"
