[package]
name = "libsetup"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../libsysinspect" }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
uuid = { version = "1.16.0", features = ["v4"] }
libc = { version = "0.2", features = ["extra_traits"] }
