[package]
name = "libsetup"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../libsysinspect" }
libcommon = { path = "../libcommon" }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
uuid = { version = "1.19.0", features = ["v4"] }
libc = { version = "0.2", features = ["extra_traits"] }
colored = "3.1.1"
