[package]
name = "libsysinspect"
version = "0.3.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
colored = "2.1.0"
hex = "0.4.3"
indexmap = { version = "2.6.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.22"
nix = { version = "0.29.0", features = ["net", "user"] }
once_cell = "1.20.2"
pem = "3.0.4"
pest = "2.7.14"
pest_derive = "2.7.14"
prettytable-rs = "0.10.0"
rand = "0.8.5"
regex = "1.10.6"
rsa = { version = "0.9.6", features = ["pkcs5", "sha1", "sha2"] }
#rustpython = { path = "../../RustPython", features = ["freeze-stdlib"] }
rustpython-pylib = { git = "https://github.com/RustPython/RustPython.git", features = [
    "freeze-stdlib",
] }
rustpython = { git = "https://github.com/RustPython/RustPython.git", features = [
    "freeze-stdlib",
] }
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", features = [
    "freeze-stdlib",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sysinfo = { version = "0.32.0", features = ["linux-tmpfs"] }
tera = { version = "1.20.0", features = ["preserve_order", "date-locale"] }
textwrap = { version = "0.16.1", features = ["hyphenation", "terminal_size"] }
tokio = { version = "1.41.1", features = ["full"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
shlex = "1.3.0"
async-trait = "0.1.86"
dashmap = "6.1.0"
