[package]
name = "libsysinspect"
version = "0.5.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
colored = "3.1.1"
hex = "0.4.3"
indexmap = { version = "2.14.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.29"
nix = { version = "0.29.0", features = ["net", "user"] }
once_cell = "1.21.4"
pem = "3.0.6"
pest = "2.8.6"
pest_derive = "2.8.6"
prettytable-rs = "0.10.0"
rand = "0.8.6"
regex = "1.12.3"
rsa = { version = "0.9.10", features = ["pkcs5", "sha1", "sha2"] }
sodiumoxide = "0.2.7"

libcommon = { path = "../libcommon" }
libsysproto = { path = "../libsysproto" }
libdpq = { path = "../libdpq" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sysinfo = { version = "0.34.2", features = ["linux-tmpfs"] }
tera = { version = "1.20.1", features = ["preserve_order", "date-locale"] }
textwrap = { version = "0.16.2", features = ["hyphenation", "terminal_size"] }
tokio = { version = "1.52.3", features = ["full"] }
unicode-segmentation = "1.13.2"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"
shlex = "1.3.0"
async-trait = "0.1.89"
dashmap = "6.2.1"
sled = "0.34.7"
if-addrs = "0.13.4"
anyhow = "1.0.102"
thiserror = "2.0.18"
jsonpath_lib = "0.3.0"
jsonpath-rust = "1.0.4"
humantime = "2"
humantime-serde = "1"
libc = "0.2.186"
console = "0.16.3"
strum = "0.27.2"
strum_macros = "0.27.2"
parse-size = "1.1.0"

[dev-dependencies]
tempfile = "3.27.0"
