[package]
name = "libtelemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
libsysinspect = { path = "../libsysinspect" }
log = "0.4.27"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "gzip-tonic", "reqwest", "tonic", "zstd-tonic"] }
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio"] }
opentelemetry-appender-log = "0.29.0"
byte-unit = { version = "5.1.6", features = ["serde"] }
regex = "1.11.1"
globset = "0.4.16"
jsonpath-rust = "1.0.1"
indexmap = { version = "2.9.0", features = ["serde"] }
