[package]
name = "libtelemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
libsysinspect = { path = "../libsysinspect" }
log = "0.4.29"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "gzip-tonic", "reqwest", "tonic", "zstd-tonic"] }
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio"] }
opentelemetry-appender-log = "0.29.0"
byte-unit = { version = "5.2.0", features = ["serde"] }
regex = "1.12.2"
globset = "0.4.18"
jsonpath-rust = "1.0.4"
indexmap = { version = "2.12.1", features = ["serde"] }
strfmt = "0.2.5"
colored = "3.0.0"
