[package]
name = "libwebapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
hex = "0.4.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sodiumoxide = "0.2.7"
tokio = { version = "1.47.1", features = ["full"] }
once_cell = "1.21.3"
log = "0.4.28"
libsysinspect = { path = "../libsysinspect" }
async-trait = "0.1.89"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "vendored", "debug-embed"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
pam = "0.8.0"
uuid = "1.18.1"
base64 = "0.22.1"
rsa = "0.9.8"
colored = "3.0.0"
serde_yaml = "0.9.34"
indexmap = { version = "2.11.1", features = ["serde"] }
