[package]
name = "libwebapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
once_cell = "1.21.3"
log = "0.4.29"
libsysinspect = { path = "../libsysinspect" }
libcommon = { path = "../libcommon" }
libdatastore = { path = "../libdatastore" }
async-trait = "0.1.89"
utoipa-swagger-ui = { version = "9.0.2", features = [
    "actix-web",
    "vendored",
    "debug-embed",
] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
pam = "0.8.0"
uuid = "1.19.0"
colored = "3.1.1"
serde_yaml = "0.9.34"
indexmap = { version = "2.13.0", features = ["serde"] }
actix-files = "0.6.10"
tempfile = "3.25.0"
futures-util = "0.3.32"
hostname = "0.4.1"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
