[package]
name = "sysinspect-client"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../libsysinspect" }
libcommon = { path = "../libcommon" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rpassword = "7.4.0"
log = "0.4.29"
reqwest = { version = "0.12.28", features = ["json"] }
