[package]
name = "sysinspect-client"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../libsysinspect" }
libcommon = { path = "../libcommon" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rpassword = "7.4.0"
log = "0.4.29"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-web = "4.12.1"
async-trait = "0.1.89"
libwebapi = { path = "../libwebapi" }
libdatastore = { path = "../libdatastore" }
tempfile = "3.25.0"
