[package]
name = "sysinspect-client"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../libsysinspect" }
libcommon = { path = "../libcommon" }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rpassword = "7.5.2"
log = "0.4.29"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-web = "4.13.0"
async-trait = "0.1.89"
libwebapi = { path = "../libwebapi" }
libdatastore = { path = "../libdatastore" }
tempfile = "3.27.0"
