[package]
name = "sysmaster"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["unstable-styles"] }
colored = "3.0.0"
ed25519-dalek = { version = "2.2.0", features = [
    "asm",
    "batch",
    "digest",
    "merlin",
    "pem",
    "pkcs8",
    "rand_core",
    "signature",
    "serde",
] }
futures = "0.3.31"
libc = "0.2.175"
rand = "0.9.2"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
libsysinspect = { path = "../libsysinspect" }
libeventreg = { path = "../libeventreg" }
libmodpak = { path = "../libmodpak" }
libscheduler = { path = "../libscheduler" }
libtelemetry = { path = "../libtelemetry" }
libwebapi = { path = "../libwebapi" }
log = "0.4.28"
sled = "0.34.7"
rsa = { version = "0.9.8", features = ["pkcs5", "sha1", "sha2"] }
uuid = { version = "1.18.1", features = ["v4"] }
actix-web = "4.11.0"
once_cell = "1.21.3"
daemonize = "0.5.0"
indexmap = { version = "2.11.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
