[package]
name = "sysmaster"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["unstable-styles"] }
colored = "3.0.0"
ed25519-dalek = { version = "2.2.0", features = [
    "asm",
    "batch",
    "digest",
    "merlin",
    "pem",
    "pkcs8",
    "rand_core",
    "signature",
    "serde",
] }
futures = "0.3.31"
libc = "0.2.178"
rand = "0.9.2"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
libsysinspect = { path = "../libsysinspect" }
libeventreg = { path = "../libeventreg" }
libmodpak = { path = "../libmodpak" }
libscheduler = { path = "../libscheduler" }
libtelemetry = { path = "../libtelemetry" }
libwebapi = { path = "../libwebapi" }
log = "0.4.29"
sled = "0.34.7"
rsa = { version = "0.9.9", features = ["pkcs5", "sha1", "sha2"] }
uuid = { version = "1.19.0", features = ["v4"] }
actix-web = "4.12.1"
once_cell = "1.21.3"
daemonize = "0.5.0"
indexmap = { version = "2.12.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
globset = "0.4.18"
