[package]
name = "sysmaster"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["unstable-styles"] }
colored = "3.1.1"
ed25519-dalek = { version = "2.2.0", features = [
    "asm",
    "batch",
    "digest",
    "merlin",
    "pem",
    "pkcs8",
    "rand_core",
    "signature",
    "serde",
] }
futures = "0.3.32"
libc = "0.2.186"
rand = "0.9.4"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
libsysinspect = { path = "../libsysinspect" }
libeventreg = { path = "../libeventreg" }
libmodpak = { path = "../libmodpak" }
libscheduler = { path = "../libscheduler" }
libtelemetry = { path = "../libtelemetry" }
libwebapi = { path = "../libwebapi", default-features = false }
libcommon = { path = "../libcommon" }
libsysproto = { path = "../libsysproto" }
libdatastore = { path = "../libdatastore" }
log = "0.4.29"
sled = "0.34.7"
rsa = { version = "0.9.10", features = ["pkcs5", "sha1", "sha2"] }
uuid = { version = "1.23.1", features = ["v4"] }
actix-web = "4.13.0"
once_cell = "1.21.4"
daemonize = "0.5.0"
indexmap = { version = "2.14.0", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
globset = "0.4.18"

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libwebapi = { path = "../libwebapi", features = ["pam"] }
