[package]
name = "sysminion"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["unstable-styles"] }
colored = "3.1.1"
ed25519-dalek = { version = "2.2.0", features = [
    "asm",
    "batch",
    "digest",
    "merlin",
    "pem",
    "pkcs8",
    "rand_core",
    "signature",
    "serde",
] }
rand = "0.9.2"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
tokio = { version = "1.49.0", features = ["full"] }
libsysinspect = { path = "../libsysinspect" }
libsetup = { path = "../libsetup" }
libmodpak = { path = "../libmodpak" }
libdpq = { path = "../libdpq" }
libsysproto = { path = "../libsysproto" }
libcommon = { path = "../libcommon" }
libsensors = { path = "../libsensors" }
log = "0.4.29"
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
indexmap = "2.13.0"
once_cell = "1.21.3"
sysinfo = { version = "0.34.2", features = ["linux-tmpfs"] }
rsa = { version = "0.9.10", features = ["pkcs5", "sha1", "sha2"] }
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = "0.12.28"
regex = "1.12.2"
glob = "0.3.3"
daemonize = "0.5.0"
libc = "0.2.180"
async-trait = "0.1.89"
futures = "0.3.31"
procfs = { version = "0.18.0", features = ["serde"] }
tempfile = "3.25.0"
