[package]
name = "sysminion"
version = "0.5.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["unstable-styles"] }
colored = "3.1.1"
ed25519-dalek = { version = "2.2.0", features = [
    "asm",
    "batch",
    "digest",
    "merlin",
    "pem",
    "pkcs8",
    "rand_core",
    "signature",
    "serde",
] }
rand = "0.9.4"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
tokio = { version = "1.52.3", features = ["full"] }
libsysinspect = { path = "../libsysinspect" }
libsetup = { path = "../libsetup" }
libmodpak = { path = "../libmodpak" }
libdpq = { path = "../libdpq" }
libsysproto = { path = "../libsysproto" }
libcommon = { path = "../libcommon" }
libsensors = { path = "../libsensors" }
log = "0.4.29"
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
indexmap = "2.14.0"
once_cell = "1.21.4"
sysinfo = { version = "0.34.2", features = ["linux-tmpfs"] }
rsa = { version = "0.9.10", features = ["pkcs5", "sha1", "sha2"] }
uuid = { version = "1.23.1", features = ["v4"] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
] }
regex = "1.12.3"
glob = "0.3.3"
daemonize = "0.5.0"
libc = "0.2.186"
async-trait = "0.1.89"
futures = "0.3.32"
tempfile = "3.27.0"
sled = "0.34.7"
procdog = { git = "https://github.com/tinythings/omnitrace.git", branch = "master" }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = { version = "0.18.0", features = ["serde"] }
