[package]
name = "resource"
version = "0.1.0"
edition = "2024"

[dependencies]
libdatastore = { path = "../../../libdatastore" }
libmodcore = { path = "../../../libmodcore"}
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.29"
