[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
libsysinspect = { path = "../../../libsysinspect" }
libmodcore = { path = "../../../libmodcore" }
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
users = "0.11.0"
