[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
libsysinspect = { path = "../../../libsysinspect" }
libmodcore = { path = "../../../libmodcore" }
reqwest = { version = "0.12.28", features = ["blocking"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
users = "0.11.0"
