[package]
name = "http-mod"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
indexmap = "2.13.0"
libmodcore = { path = "../../../libmodcore" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
