[package]
name = "lua-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
libmodcore = { path = "../../../libmodcore" }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
mlua = { version = "0.11.5", features = ["lua54", "serde", "serialize", "vendored"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
clap = "4.5.54"
