[package]
name = "lua-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
libmodcore = { path = "../../../libmodcore" }
libcommon = { path = "../../../libcommon" }
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
mlua = { version = "0.11.6", features = ["lua54", "serde", "serialize", "vendored"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = "4.6.1"
log = "0.4.29"
chrono = "0.4.44"

[dev-dependencies]
tempfile = "3.27.0"
